--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,5 @@
 name: 'AWS Lambda Layer Release'
+author: Gaurav Sharma <sharma02gaurav@gmail.com>
 description: 'Action lets you release your latest lambda layer version'
 inputs:
   access_key_id:  # id of input
@@ -34,3 +35,6 @@ inputs:
 runs:
   using: 'node16'
   main: 'index.js'
+branding:
+  icon: 'archive'
+  color: 'gray-dark'
